--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -8,7 +8,7 @@ layout: default
   </header>
 
   <div class="post-content">
-    <p>{{ page.title }}</p>
+    <p>{{ page.caption | markdown }}</p>
     {% for photo in page.photos %}
       <div class="photo">
         <img src="{{photo.url}}">
