--- a/_layouts/text.html
+++ b/_layouts/text.html
@@ -11,5 +11,5 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
-
+  {% include comments.html %}
 </article>
