--- a/_layouts/video.html
+++ b/_layouts/video.html
@@ -11,7 +11,7 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ page.player }}
 
-    <p>{{page.caption}}</p>
+    <p>{{page.caption | markdownify}}</p>
   </div>
   {% include comments.html %}
 </article>
