--- a/_layouts/video.html
+++ b/_layouts/video.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
     <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
@@ -11,7 +10,12 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ page.player }}
 
-    <p>{{page.caption | markdownify}}</p>
+    <p>
+      {% if page.caption %}
+        {{page.caption | markdownify}}
+      {% endif %}
+      {{content}}
+    </p>
   </div>
   {% include comments.html %}
 </article>
